# HPC-project-2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md  launch.sh  main.cu
include/: canvas.cuh  cli.cuh  cli.hpp  color.cuh  complex_functions.cuh  config.cuh  evolution.cuh  frames.cuh  lower_bound.cuh  particle_generator.cuh  sorter.cuh  tiles.cuh  tiles.hpp  utils.cuh  video.cuh
scripts/: build.sh  cuda.bat  cuda.sh  cuda_2.bat  omp.bat  omp.sh  omp_2.bat  serial.bat  serial.sh  serial_2.bat  video.bat  video.sh
scripts/lloyd/: cuda.bat  omp.bat  serial.bat
scripts/qHD-6448/: omp.bat  omp.sh  serial.bat
scripts/video/: video.bat  video.sh
src/: canvas.cu  cli.cpp  cli.cu  color.cu  complex_functions.cu  config.cu  evolution.cu  frames.cu  particle_generator.cu  tiles.cpp  tiles.cu  utils.cu  video.cu
